@@ -15,10 +15,15 @@
                 "template": "BasicOverview",
                 "menuindex": "1",
                 "published": "1",
-                "tvs": [{
-                    "name": "overview_icon_svg",
-                    "value": "romanesco/information.svg"
-                }]
+                "tvs": [
+                    {
+                        "name": "overview_icon_svg",
+                        "value": "romanesco/information.svg"
+                    },{
+                        "name": "overview_icon_font",
+                        "value": "info circle icon"
+                    }
+                ]
             },{
                 "pagetitle": "Presentation",
                 "longtitle": "Create a coherent visual experience",
@@ -33,10 +38,15 @@
                 "template": "BasicOverview",
                 "menuindex": "2",
                 "published": "1",
-                "tvs": [{
-                    "name": "overview_icon_svg",
-                    "value": "romanesco/presentation.svg"
-                }]
+                "tvs": [
+                    {
+                        "name": "overview_icon_svg",
+                        "value": "romanesco/presentation.svg"
+                    },{
+                        "name": "overview_icon_font",
+                        "value": "tv icon"
+                    }
+                ]
             },{
                 "pagetitle": "Navigation",
                 "longtitle": "Make finding the right content fast and effortless",
@@ -51,10 +61,15 @@
                 "template": "BasicOverview",
                 "menuindex": "3",
                 "published": "1",
-                "tvs": [{
-                    "name": "overview_icon_svg",
-                    "value": "romanesco/navigation.svg"
-                }]
+                "tvs": [
+                    {
+                        "name": "overview_icon_svg",
+                        "value": "romanesco/navigation.svg"
+                    },{
+                        "name": "overview_icon_font",
+                        "value": "map signs icon"
+                    }
+                ]
             },{
                 "pagetitle": "Confirmation",
                 "longtitle": "Show visitors that your (organizations') cause is just",
@@ -69,10 +84,15 @@
                 "template": "BasicOverview",
                 "menuindex": "4",
                 "published": "1",
-                "tvs": [{
-                    "name": "overview_icon_svg",
-                    "value": "romanesco/confirmation.svg"
-                }]
+                "tvs": [
+                    {
+                        "name": "overview_icon_svg",
+                        "value": "romanesco/confirmation.svg"
+                    },{
+                        "name": "overview_icon_font",
+                        "value": "checkmark icon"
+                    }
+                ]
             },{
                 "pagetitle": "Publication",
                 "longtitle": "Get your knowledge, data and opinions out there",
@@ -87,10 +107,15 @@
                 "template": "BasicOverview",
                 "menuindex": "5",
                 "published": "1",
-                "tvs": [{
-                    "name": "overview_icon_svg",
-                    "value": "romanesco/publication.svg"
-                }]
+                "tvs": [
+                    {
+                        "name": "overview_icon_svg",
+                        "value": "romanesco/publication.svg"
+                    },{
+                        "name": "overview_icon_font",
+                        "value": "write icon"
+                    }
+                ]
             },{
                 "pagetitle": "Impression",
                 "longtitle": "Take on a more visual approach to tell your story",
@@ -105,10 +130,15 @@
                 "template": "BasicOverview",
                 "menuindex": "6",
                 "published": "1",
-                "tvs": [{
-                    "name": "overview_icon_svg",
-                    "value": "romanesco/impression.svg"
-                }]
+                "tvs": [
+                    {
+                        "name": "overview_icon_svg",
+                        "value": "romanesco/impression.svg"
+                    },{
+                        "name": "overview_icon_font",
+                        "value": "paintbrush icon"
+                    }
+                ]
             },{
                 "pagetitle": "Persuasion",
                 "longtitle": "Convince visitors that there's value in what you offer",
@@ -123,10 +153,15 @@
                 "template": "BasicOverview",
                 "menuindex": "7",
                 "published": "1",
-                "tvs": [{
-                    "name": "overview_icon_svg",
-                    "value": "romanesco/persuasion.svg"
-                }]
+                "tvs": [
+                    {
+                        "name": "overview_icon_svg",
+                        "value": "romanesco/persuasion.svg"
+                    },{
+                        "name": "overview_icon_font",
+                        "value": "diamond icon"
+                    }
+                ]
             },{
                 "pagetitle": "Connection",
                 "longtitle": "Get in touch with your audience",
@@ -141,10 +176,15 @@
                 "template": "BasicOverview",
                 "menuindex": "8",
                 "published": "1",
-                "tvs": [{
-                    "name": "overview_icon_svg",
-                    "value": "romanesco/connection.svg"
-                }]
+                "tvs": [
+                    {
+                        "name": "overview_icon_svg",
+                        "value": "romanesco/connection.svg"
+                    },{
+                        "name": "overview_icon_font",
+                        "value": "share alternate icon"
+                    }
+                ]
             },{
                 "pagetitle": "Conversation",
                 "longtitle": "Stay in touch with your audience",
@@ -159,10 +199,15 @@
                 "template": "BasicOverview",
                 "menuindex": "9",
                 "published": "1",
-                "tvs": [{
-                    "name": "overview_icon_svg",
-                    "value": "romanesco/conversation.svg"
-                }]
+                "tvs": [
+                    {
+                        "name": "overview_icon_svg",
+                        "value": "romanesco/conversation.svg"
+                    },{
+                        "name": "overview_icon_font",
+                        "value": "comments outline icon"
+                    }
+                ]
             }
         ]
     }
