@@ -2,6 +2,7 @@
 
 ## Backyard 0.3.1
 
+- Add Backyard resources
 - Corrections and additional content
 
 ## Backyard 0.3.0
